@@ -5,6 +5,9 @@
 	* info/display.c (display_update_window_1): Go to new line properly
 	when highlighted region crosses line.
 
+	* info: (all files) Change use of quotation marks.  Quote 'thusly'
+	instead of `thusly' in user messages.
+
 2014-09-01  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* info/session.c (info_move_to_prev_xref, info_move_to_next_xref):
